[gd_scene load_steps=15 format=2]

[ext_resource path="res://Grid/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Stone elements/elementStone011.png" type="Texture" id=2]
[ext_resource path="res://Assets/Stone elements/elementStone012.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Xolonium-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/UI.gd" type="Script" id=5]
[ext_resource path="res://Assets/Other/starDiamond.png" type="Texture" id=6]
[ext_resource path="res://Assets/Other/coinGold.png" type="Texture" id=7]
[ext_resource path="res://Assets/Other/flagRed.png" type="Texture" id=8]
[ext_resource path="res://Game/Game.gd" type="Script" id=9]
[ext_resource path="res://UI/EndScreen.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 5
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 9 )

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0.364706, 0.329412, 0.466667, 1 )

[node name="Boards" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 140.0
custom_constants/separation = 16
alignment = 1

[node name="TimeBoard" type="TextureRect" parent="UI/Boards"]
margin_left = 19.0
margin_right = 159.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Boards/TimeBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
alignment = 1

[node name="FlagIcon" type="TextureRect" parent="UI/Boards/TimeBoard/VBoxContainer"]
margin_top = 4.0
margin_right = 140.0
margin_bottom = 39.0
rect_min_size = Vector2( 70, 35 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="TimeLabel" type="Label" parent="UI/Boards/TimeBoard/VBoxContainer"]
margin_top = 43.0
margin_right = 140.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 60 )
custom_colors/font_color = Color( 0.388235, 0.529412, 0.894118, 1 )
custom_fonts/font = SubResource( 1 )
text = "60"
align = 1
valign = 1

[node name="ScoreBoard" type="TextureRect" parent="UI/Boards"]
margin_left = 175.0
margin_right = 455.0
margin_bottom = 140.0
rect_min_size = Vector2( 280, 140 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Boards/ScoreBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="StarIcon" type="TextureRect" parent="UI/Boards/ScoreBoard/VBoxContainer"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 83.0
rect_min_size = Vector2( 70, 70 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ScoreLabel" type="Label" parent="UI/Boards/ScoreBoard/VBoxContainer"]
margin_top = 87.0
margin_right = 280.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.231373, 0.682353, 0.690196, 1 )
custom_fonts/font = SubResource( 2 )
text = "999999"
align = 1

[node name="CoinBoard" type="TextureRect" parent="UI/Boards"]
margin_left = 471.0
margin_right = 611.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Boards/CoinBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="UI/Boards/CoinBoard/VBoxContainer"]
margin_top = 13.0
margin_right = 140.0
margin_bottom = 83.0
rect_min_size = Vector2( 70, 70 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="CoinLabel" type="Label" parent="UI/Boards/CoinBoard/VBoxContainer"]
margin_top = 87.0
margin_right = 140.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.913725, 0.741176, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "30"
align = 1

[node name="Screens" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="SignScreen" type="ColorRect" parent="Screens"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.0588235, 0.301961, 0.784314 )

[node name="SignLabel" type="Label" parent="Screens/SignScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Ready?"
align = 1
valign = 1

[node name="EndScreen" parent="Screens" instance=ExtResource( 10 )]

[node name="SignTimer" type="Timer" parent="."]
pause_mode = 2

[node name="PlayTimer" type="Timer" parent="."]

[connection signal="timeout" from="SignTimer" to="." method="_on_SignTimer_timeout"]
[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]
